fix scrollbar issu

--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ body {
  overflow-x: hidden; */
 }
 ::-webkit-scrollbar{
-display: none;
+width: 0;
 }
 
 
